# surf12adam

./: .gitignore  Makefile  README.md  compmake.rc  orbit.online_report.yaml  runlist.sh  setup.py
diffeo_experiments/: ParseMessages.py  demo_processed.py  diffeo_demo.py  diffeo_demo.py~  diffeo_estimator_demo.py  hub.py  imagetest.py  learn_demo.py  learn_from_random.py  planner.py  predictor_apply.py  predictor_test.py  repman_test.py  resolution.py  runlist.sh  super_test.py  test.py  timeuse-learners.py
diffeo_experiments/calibrator/: joint_calibrator.py
diffeo_experiments/comp/: comptest.py
diffeo_experiments/comp/compmake_storage/: cm:default:args:func-0.pickle  cm:default:args:func.pickle  cm:default:job:func-0.pickle  cm:default:job:func.pickle
diffeo_experiments/compmake_storage/: cm:default:job:demo_topic.pickle
diffeo_experiments/distance/: ParseMessages.py  distance.py  distance_test.py
diffeo_experiments/fourier/: fft.py  fft2.py  plots.py
diffeo_experiments/gaussian/: env1d.html  env1d.py  explore.py  gausian_demo.py  gp_estimator.py  gp_gen.py
diffeo_experiments/pil_ops/: image_transform.py
diffeo_experiments/plots/: contourf_quiver_3d.py  image_in_plot.py
diffeo_experiments/test/: neig_esim_score[i].pickle  neig_y_stats[i].pickle  statsandfit.py
diffeo_experiments/test/repman/: report_index.html
documents/: learning_agent_demo.tex  references.bib
documents/camera_learning/: camera_learning.tex
html/: area_browser.html  browser_head.html  browser_panels.html  diffeo_browser.html
logitech_cam/: .gitignore  .project  CMakeLists.txt  logitech_cam_actuation.launch  mainpage.dox  manifest.xml  run_learning.launch  show_processed.launch  startup_camera.launch  startup_camera2.launch
logitech_cam/msg/: CamCmd.msg  CmdActionData.msg  README
logitech_cam/src/: CreeperCam.cc  CreeperCam.h  ImageTunnel.cc  ImageTunnel.h  cam_actuator_node.cc  cam_trigger_console.cc  camera_reader.py  cmd_action_logger_node.cc  cmd_action_logger_node.h  command_generator.cc  command_generator.py  ctrl_prompt_node.cc  image_converter.py  learner.py  logger_data_player.cc  logger_data_player.h  myimage_viewer.cc  pre_processor.py  predictor.py
logitech_cam/src/logitech_cam/msg/: _CamCmd.py  _CmdActionData.py  _IntArray.py  __init__.py
ros/array_msgs/: .gitignore  mainpage.dox  manifest.xml
ros/array_msgs/msg/: LearningData.msg
ros/camera_actuator/: CMakeLists.txt  capture_data_raw.launch  mainpage.dox  manifest.xml
ros/camera_actuator/msg_gen/cpp/include/camera_actuator/: CamCmd.h  IntArray.h
ros/camera_actuator/msg_gen/lisp/: CamCmd.lisp  IntArray.lisp  _package.lisp  _package_CamCmd.lisp  _package_IntArray.lisp  camera_actuator-msg.asd
ros/camera_actuator/src/: CreeperCam.cc  CreeperCam.h  cam_actuator_node.cc  command_generator.py  controls.cc  test_noros.cc
ros/camera_actuator/src/camera_actuator/msg/: _CamCmd.py  _IntArray.py  __init__.py
ros/diffeo_planner/: mainpage.dox  manifest.xml
ros/diffeo_planner/configs/: orbit.yaml  youbot.yaml  youbot_arm.yaml  youbot_arm_base_wrist.yaml  youbot_base1.yaml  youbot_car1.yaml  youbot_fast.yaml  youbot_tran1.yaml  youbottest.yaml
ros/diffeo_planner/launch/: learn.launch
ros/diffeo_planner/src/: __init__.py  babbler.py  command_tester.py  diffeo_planner.py  diffeo_planner_continuous.py  diffeo_planner_standalone.py  learn_command_generator.py  ui.py
src/diffeoplan/: __init__.py
src/diffeoplan/configs/: cl.algos.yaml  cl.batch.yaml  cl.discdds.yaml  cl.symdds.yaml  cl.symdiffeos.yaml  cl.tc.yaml  compositions.symdiffeos.yaml  demo.batch.yaml  graph.algos.yaml  informed.algos.yaml  keystone.images.yaml  landroid.streams.yaml  orbit.online.yaml  orbit.streams.yaml  pantitl.discdds.yaml  random.algos.yaml  random.tc.yaml  refining.learners.yaml  serious.batch.yaml  simple.dds.yaml  simple.distances.yaml  simple.images.yaml  simple.learners.yaml  simple.symdds.yaml  simple.symdiffeos.yaml  systematic.algos.yaml  transform.discdds.yaml  youbot.streams.yaml
src/diffeoplan/configuration/: __init__.py  checks.py  master.py
src/diffeoplan/programs/: __init__.py  covariance.py  dp_config.py  main.py  show_config.py  timeuse_learners.py  utils.py
src/diffeoplan/unittests/: tests_generation.py
src/diffeoplan/utils/: __init__.py  lenient_option_parser.py  matrices.py  memoization.py  memoize_limits.py  memoize_limits_test.py  resampling_signal.py  script_utils.py  with_internal_log.py
src/diffeoplan_agent/: __init__.py  dp_agent_simple.py  dp_servo_simple.py
src/ggs/: __init__.py  drawing.py  generic_graph_search.py  simple.py
src/ggs/utils/: __init__.py  graph_manipulation.py
src/learner/: __init__.py  diffeo_analysis.py  diffeo_learner.py  learner.py  oneclick.py  pre_processor.py
src/learner/programs/: __init__.py
src/procgraph_diffeo/: __init__.py  apply_diffeo_action.py  dp_dds_predict.py  dp_dds_predict_matrix.py
(+126 files in other folders)
